<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/settings_label_general">

        <EditTextPreference
            app:icon="@drawable/ic_person_settings_24"
            app:defaultValue="Anouar"
            app:key="user_name"
            app:title="@string/setting_user_name_label"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:key="switch_language"
            app:defaultValue="French"
            app:entries="@array/settings_options_languages"
            app:entryValues="@array/settings_options_languages"
            app:icon="@drawable/ic_language_24"
            app:title="@string/settings_label_native_language"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreferenceCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:summaryOff="@string/settings_label_enable_dark_theme_mode"
            android:summaryOn="@string/settings_label_disable_dark_theme_mode"
            app:icon="@drawable/ic_dark_mode_24"
            app:key="switch_theme"
            app:title="@string/settings_label_theme" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_label_more">
        <Preference
            android:key="btn_contactus"
            android:icon="@drawable/ic_phone_24"
            android:summary="@string/settings_label_send_us_an_email_for_more_info"
            android:title="@string/settings_label_contact_us" />
        <Preference
            android:key="btn_privacy"
            android:icon="@drawable/ic_privacy_tip_24"
            android:summary="@string/settings_label_tap_to_access_app_privacy"
            android:title="@string/settings_label_terms_and_privacy_policy" />
    </PreferenceCategory>

</PreferenceScreen>