<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_nav_home"
        android:icon="@drawable/ic_home_outline_24"
        android:checked="true"
        android:title="@string/menu_nav_label_home" />
    <item
        android:id="@+id/menu_nav_tables"
        android:icon="@drawable/ic_outline_table_24"
        android:title="@string/menu_nav_label_tables" />
    <item
        android:title=""
        android:enabled="false"/>
    <item
        android:id="@+id/menu_nav_quiz"
        android:icon="@drawable/ic_outline_question_answer_24"
        android:title="@string/menu_nav_label_q_a" />
    <item
        android:id="@+id/menu_nav_settings"
        android:checked="false"
        android:icon="@drawable/ic_outline_settings_24"
        android:title="@string/menu_nav_label_settings"
        />

</menu>