<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_toolbar_search"
        android:title="@string/menu_toolbar_search"
        android:icon="@drawable/ic_search_24"
        android:visible="false"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />
    <item
        android:id="@+id/menu_toolbar_contact_us"
        android:title="@string/menu_toolbar_contact_us"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_toolbar_rating_app"
        android:icon="@drawable/ic1_rate"
        android:title="@string/menu_toolbar_rate"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_toolbar_sign_out"
        android:icon="@drawable/ic1_rate"
        android:title="@string/menu_toolbar_sign_out"
        app:showAsAction="never"/>

</menu>